--- a/openfisca_spain/tests/benefits/HG-077.yaml
+++ b/openfisca_spain/tests/benefits/HG-077.yaml
@@ -4,10 +4,10 @@
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: true
+     ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -15,25 +15,25 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: true
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: true
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 200 ]
 
-- name: "Persona amb tots els condicionants menys VICTERRORISME reb l'ajuda màxima no BLJ"
+- name: "Persona amb tots els condicionants menys victima_de_terrorisme reb l'ajuda màxima no BLJ"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: true
+     ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -41,25 +41,25 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: false
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: false
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 200 ]
 
-- name: "Persona amb tots els condicionants menys INGSUFLLOG reb l'ajuda màxima no BLJ"
+- name: "Persona amb tots els condicionants menys ingressos_suficients_per_pagar_el_lloguer reb l'ajuda màxima no BLJ"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: false
+     ingressos_suficients_per_pagar_el_lloguer: false
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -67,26 +67,26 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: true
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: true
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 200 ]
 
 
-- name: "Persona amb tots els condicionants menys INGSUFLLOG reb l'ajuda mínima no BLJ"
+- name: "Persona amb tots els condicionants menys ingressos_suficients_per_pagar_el_lloguer reb l'ajuda mínima no BLJ"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: false
+     ingressos_suficients_per_pagar_el_lloguer: false
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 150
   persons:
    - id: "pare1"
@@ -94,26 +94,26 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: true
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: true
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 20 ]
 
 
-- name: "Persona amb tots els condicionants menys INGSUFLLOG reb l'ajuda BLJ"
+- name: "Persona amb tots els condicionants menys ingressos_suficients_per_pagar_el_lloguer reb l'ajuda BLJ"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: false
+     ingressos_suficients_per_pagar_el_lloguer: false
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -121,25 +121,25 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: true
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: true
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 240 ]
 
-- name: "Persona amb tots els condicionants menys INGSUFLLOG i VICTERRORISME NO reb l'ajuda"
+- name: "Persona amb tots els condicionants menys ingressos_suficients_per_pagar_el_lloguer i victima_de_terrorisme NO reb l'ajuda"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: false
+     ingressos_suficients_per_pagar_el_lloguer: false
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -147,12 +147,12 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: false
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: false
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 0 ]
 
@@ -162,10 +162,10 @@
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: true
+     ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: false
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -173,25 +173,25 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: false
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: false
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 0 ]
 
-- name: "Persona amb tots els condicionants menys CORRPAGLLOG NO reb l'ajuda"
+- name: "Persona amb tots els condicionants menys esta_al_corrent_del_pagament_de_lloguer NO reb l'ajuda"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: true
+     ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
-     CORRPAGLLOG: false
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: false
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -199,25 +199,25 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: false
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: false
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 0 ]
 
-- name: "Persona amb tots els condicionants menys LLOGDOMI NO reb l'ajuda"
+- name: "Persona amb tots els condicionants menys lloguer_domiciliat NO reb l'ajuda"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: true
+     ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: false
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: false
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -225,25 +225,25 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: false
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: false
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 0 ]
 
-- name: "Persona amb tots els condicionants menys RESCAT5ANYS NO reb l'ajuda"
+- name: "Persona amb tots els condicionants menys resident_a_catalunya_durant_5_anys NO reb l'ajuda"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: true
+     ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -251,25 +251,25 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: false
-     VICTERRORISME: false
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: false
+     victima_de_terrorisme: false
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 0 ]
 
-- name: "Persona amb tots els condicionants menys RISCEXCSOC NO reb l'ajuda"
+- name: "Persona amb tots els condicionants menys risc_d_exclusio_social NO reb l'ajuda"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: true
+     ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -277,25 +277,25 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: false
-     RISCEXCSOC: false
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: false
+     risc_d_exclusio_social: false
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 0 ]
 
-- name: "Persona amb tots els condicionants menys TITCONTLLOG NO reb l'ajuda"
+- name: "Persona amb tots els condicionants menys existeix_un_contracte_de_lloguer NO reb l'ajuda"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: true
+     ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -303,25 +303,25 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: false
-     RISCEXCSOC: true
-     TITCONTLLOG: false
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: false
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: false
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 0 ]
 
-- name: "Persona amb tots els condicionants menys PROHBENSUB NO reb l'ajuda"
+- name: "Persona amb tots els condicionants menys pot_rebre_subvencions NO reb l'ajuda"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: true
+     ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -329,25 +329,25 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: false
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: false
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: false
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: false
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 0 ]
 
-- name: "Persona amb tots els condicionants menys COMPOBTRIBADMIN NO reb l'ajuda"
+- name: "Persona amb tots els condicionants menys al_corrent_de_les_obligacions_tributaries NO reb l'ajuda"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
   households:
      parents: ["pare1"]
-     INGSUFLLOG: true
+     ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -355,12 +355,12 @@
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: false
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: false
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: false
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: false
   output_variables:
      HG_077_mensual: [ 0 ]
 
@@ -370,10 +370,10 @@
   absolute_error_margin: false
   households:
      parents: ["pare1", "fill1"]
-     INGSUFLLOG: true
+     ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
-     CORRPAGLLOG: true
-     LLOGDOMI: true
+     esta_al_corrent_del_pagament_de_lloguer: true
+     lloguer_domiciliat: true
      import_del_lloguer: 700
   persons:
    - id: "pare1"
@@ -381,22 +381,22 @@
      ingressos_disponibles: 0
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: false
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: false
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: false
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: false
    - id: "fill1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
      es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
-     RESCAT5ANYS: true
-     VICTERRORISME: false
-     RISCEXCSOC: true
-     TITCONTLLOG: true
-     PROHBENSUB: true
-     COMPOBTRIBADMIN: true
+     resident_a_catalunya_durant_5_anys: true
+     victima_de_terrorisme: false
+     risc_d_exclusio_social: true
+     existeix_un_contracte_de_lloguer: true
+     pot_rebre_subvencions: true
+     al_corrent_de_les_obligacions_tributaries: true
   output_variables:
      HG_077_mensual: [ 0, 240 ]
