--- a/openfisca_spain/tests/benefits/HG-077.yaml
+++ b/openfisca_spain/tests/benefits/HG-077.yaml
@@ -2,14 +2,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -28,14 +28,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -54,14 +54,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: false
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -81,14 +81,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: false
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 150
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -108,14 +108,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: false
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1931-01-15'
      ingressos_disponibles: 7000
@@ -134,14 +134,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: false
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -160,14 +160,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: false
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -186,14 +186,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: false
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -212,14 +212,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: false
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -238,14 +238,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -264,14 +264,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -290,14 +290,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -316,14 +316,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -342,14 +342,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1"]
+  families:
+     adults: ["pare1"]
      ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_disponibles: 7000
@@ -368,14 +368,14 @@
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
-  households:
-     parents: ["pare1", "fill1"]
+  families:
+     adults: ["pare1", "fill1"]
      ingressos_suficients_per_pagar_el_lloguer: true
      LLOGMAXBCN: true
      esta_al_corrent_del_pagament_de_lloguer: true
      lloguer_domiciliat: true
      import_del_lloguer: 700
-  persons:
+  persones:
    - id: "pare1"
      data_naixement: '1947-01-15'
      ingressos_disponibles: 0
