--- a/openfisca_spain/tests/edat.yaml
+++ b/openfisca_spain/tests/edat.yaml
@@ -1,12 +1,12 @@
 
 # Test files describe situations and their expected outcomes
-# We can run this test on our command line using `openfisca-run-test age.yaml`
+# We can run this test on our command line using `openfisca-run-test edat.yaml`
 
 - name: Person born on the 15th of Jan 1980
   period: 2015-01
   input_variables:
     data_naixement: 1980-01-15
   output_variables:
-    age:
+    edat:
       2015-01: 34
       2015-02: 35
