--- a/production-config/config.ini
+++ b/production-config/config.ini
@@ -7,6 +7,10 @@
 # Debug mode will enable the interactive debugging tool, allowing ANYONE to
 # execute malicious code after an exception is raised.
 debug = false
+# Update email addresses
+email_to = webmaster@qq.com
+from_address = webmaster+api@qq.com
+smtp_server = localhost
 
 [server:main]
 use = egg:gunicorn#main
