Set production config

--- a/production-config/config.ini
+++ b/production-config/config.ini
@@ -8,8 +8,8 @@
 # execute malicious code after an exception is raised.
 debug = false
 # Update email addresses
-email_to = webmaster@qq.com
-from_address = webmaster+api@qq.com
+email_to = webmaster@mydomain.com
+from_address = webmaster+api@mydomain.com
 smtp_server = localhost
 
 [server:main]
